--- a/Clash.yaml
+++ b/Clash.yaml
@@ -1,4 +1,4 @@
-# 2020年03月07日 16:45 UTC/GMT +8
+# 2020年03月10日 21:40 UTC/GMT +8
 
 # 配置文件需要放置在 $HOME/.config/clash/config.yml
 
@@ -451,7 +451,7 @@ Rule:
 - DOMAIN-SUFFIX,feng.com,Domestic
 - DOMAIN-SUFFIX,fir.im,Domestic
 - DOMAIN-SUFFIX,frdic.com,Domestic
-- DOMAIN-SUFFIX,g-cores.com,Domestic
+- DOMAIN-SUFFIX,gcores.com,Domestic
 - DOMAIN-SUFFIX,godic.net,Domestic
 - DOMAIN-SUFFIX,gtimg.com,Domestic
 - DOMAIN,cdn.hockeyapp.net,Domestic
