--- a/Quantumult_lite.conf
+++ b/Quantumult_lite.conf
@@ -1,4 +1,4 @@
-# 2020年03月07日 16:45 UTC/GMT +8
+# 2020年03月10日 21:40 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules Lite"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」。
@@ -1756,6 +1756,7 @@ HOST-SUFFIX,feng.com,PROXY
 HOST-SUFFIX,fir.im,PROXY
 HOST-SUFFIX,frdic.com,PROXY
 HOST-SUFFIX,fresh-ideas.cc,PROXY
+HOST-SUFFIX,gcores.com,PROXY
 HOST-SUFFIX,geetest.com,PROXY
 HOST-SUFFIX,godic.net,PROXY
 HOST-SUFFIX,goodread.com,PROXY
