--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,6 +1,6 @@
 # 适用于 Loon 2.0+ 版本的配置文件
 # 使用 JS 脚本需要 Loon 版本大于 2.1.0(107)，如不符合请删除 [Script] 所有内容直到 [MITM] 上方（包扩 [Script]）
-# 2020年03月07日 16:45 UTC/GMT +8
+# 2020年03月12日 00:18 UTC/GMT +8
 
 [General]
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
@@ -35,7 +35,7 @@ Dler Cloud - KR = NameRegex,Dler Cloud,FilterKey = .*韩国
 Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*美国
 
 [Proxy Group]
-# 默认注释网易云音乐 / Netflix / Spotify / YouTube / Telegram / Microsoft 规则及策略，如需使用请取消 # 备注
+# 默认注释网易云音乐 / Netflix / Spotify / YouTube / Telegram 规则及策略，如需使用请取消 # 备注
 🚫广告拦截 = select,⛔️拦截,⭕️直连
 ✈️代理 = select,🔎自动选择,🇨🇳中国节点,🇭🇰香港节点,🇨🇳台湾节点,🇸🇬新加坡节点,🇯🇵日本节点,🇰🇷韩国节点,🇺🇸美国节点,Dler Cloud
 🥏大陆网络 = select,⭕️直连,🇨🇳中国节点
@@ -47,7 +47,6 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*美国
 #🎵声田音乐 = select,🎬国际媒体,✈️代理,⭕️直连
 #📺油管视频 = select,🎬国际媒体,✈️代理,⭕️直连
 #📡电报服务 = select,✈️代理,🇸🇬新加坡节点,🇺🇸美国节点,🇭🇰香港节点
-#📦微软服务 = select,⭕️直连,✈️代理
 ⏳网速测试 = select,✈️代理,⭕️直连,Dler Cloud
 🔗其他 = select,✈️代理,⭕️直连
 
@@ -85,7 +84,7 @@ FINAL,🔗其他
 
 [Remote Rule]
 # 订阅规则、策略
-# 默认注释网易云音乐 / Netflix / Spotify / YouTube / Telegram / Microsoft 规则及策略，如需使用请取消 # 备注
+# 默认注释网易云音乐 / Netflix / Spotify / YouTube / Telegram 规则及策略，如需使用请取消 # 备注
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list,🚫广告拦截
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list,🍏苹果服务
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list,🎵网易云音乐
@@ -95,7 +94,6 @@ https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/As
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list,📺油管视频
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list,🎬国际媒体
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list,📡电报服务
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list,📦微软服务
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Speedtest.list,⏳网速测试
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Proxy.list,✈️代理
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic.list,🥏大陆网络
