更新 TikTok 解锁描述

--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,6 +1,6 @@
 # 适用于 Loon 2.0+ 版本的配置文件
 # 使用 JS 脚本需要 Loon 版本大于 2.1.0(107)，如不符合请删除 [Script] 所有内容直到 [MITM] 上方（包扩 [Script]）
-# 2020年03月14日 00:40 UTC/GMT +8
+# 2020年03月15日 20:35 UTC/GMT +8
 
 [General]
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
@@ -104,6 +104,7 @@ enable = true
 # 解锁 TikTok
 # 更换 TikTok 区域请修改下方国家代码，默认为韩国 KR
 # 非亚洲区域 App Store 下载的 TikTok 请将 "8.4.0" 修改为 "14.0.0"
+# 使用国内版抖音需使用 # 注释 (?<=version_code=)\d{1,}.\d{1}\.\d{1} 8.4.0 307 规则
 (.*video_id=\w{32})(.*watermark=)(.*) $1 302
 (?<=(carrier|account|sys|sim)_region=)CN KR 307
 (?<=version_code=)\d{1,}.\d{1}\.\d{1} 8.4.0 307
