--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
-# 该文件基于 Quantumult X 1.0.5 正式版制作。
+# 该文件基于 Quantumult X 1.0.6 正式版制作。
 #
-# 2020年03月07日 17:10 UTC/GMT +8
+# 2020年03月15日 20:35 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -94,9 +94,13 @@ final, Others
 # 解锁 TikTok
 # 更换 TikTok 区域请修改下方国家代码，默认为韩国 KR
 # 非亚洲区域 App Store 下载的 TikTok 请将 "8.4.0" 修改为 "14.0.0"
+# 使用国内版抖音需使用 ; 注释 (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0 规则
 (.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
 (?<=(carrier|account|sys|sim)_region=)CN url 307 KR
 (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0
+
+[task_local]
+
 
 [mitm]
 # 请在正式使用前将其他已信任证书的密码及 P12 填入下方，并删掉 passphrase 和 p12 前的分号
