--- a/QuantumultX/Sample/DlerCloud/Tail.conf
+++ b/QuantumultX/Sample/DlerCloud/Tail.conf
@@ -29,3 +29,9 @@ https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrit
 http://cloudcompute.lbyczf.com/quanx-rewrite, tag=Rewrite (lhie1), enabled=false
 
 [rewrite_local]
+# 更换 TikTok 区域请修改下方国家代码，默认为韩国 KR
+# 非亚洲区域 App Store 下载的 TikTok 请将 "8.4.0" 修改为 "14.0.0"
+# 使用国内版抖音需使用 ; 注释 (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0 规则
+(.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
+(?<=(carrier|account|sys|sim)_region=)CN url 307 KR
+(?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0
