--- a/Clash/Clash.yaml
+++ b/Clash/Clash.yaml
@@ -1,6 +1,6 @@
-# 2020年03月14日 00:40 UTC/GMT +8
+# 2020年03月17日 16:00 UTC/GMT +8
 
-# 配置文件需要放置在 $HOME/.config/clash/config.yml
+# 配置文件需要放置在 $HOME/.config/clash/config.yaml
 
 # HTTP 代理端口
 port: 7890
@@ -372,15 +372,21 @@ Rule:
 - DOMAIN-SUFFIX,nflximg.net,Netflix
 - DOMAIN-SUFFIX,nflxso.net,Netflix
 - DOMAIN-SUFFIX,nflxvideo.net,Netflix
+- IP-CIDR,8.41.4.0/24,Netflix
 - IP-CIDR,23.246.0.0/18,Netflix
 - IP-CIDR,37.77.184.0/21,Netflix
 - IP-CIDR,45.57.0.0/17,Netflix
 - IP-CIDR,64.120.128.0/17,Netflix
 - IP-CIDR,66.197.128.0/17,Netflix
+- IP-CIDR,69.53.224.0/19,Netflix
 - IP-CIDR,108.175.32.0/20,Netflix
+- IP-CIDR,185.2.220.0/22,Netflix
+- IP-CIDR,185.9.188.0/22,Netflix
 - IP-CIDR,192.173.64.0/18,Netflix
 - IP-CIDR,198.38.96.0/19,Netflix
 - IP-CIDR,198.45.48.0/20,Netflix
+- IP-CIDR,207.45.72.0/22,Netflix
+- IP-CIDR,208.75.76.0/22,Netflix
 
 # YouTube
 - DOMAIN-KEYWORD,youtube,YouTube
@@ -413,131 +419,6 @@ Rule:
 - DOMAIN-KEYWORD,usage,REJECT
 - DOMAIN-KEYWORD,wlmonitor,REJECT
 - DOMAIN-KEYWORD,zjtoolbar,REJECT
-
-# Domestic（中国网站）
-- DOMAIN-SUFFIX,cn,Domestic
-- DOMAIN-KEYWORD,-cn,Domestic
-- DOMAIN-SUFFIX,126.com,Domestic
-- DOMAIN-SUFFIX,126.net,Domestic
-- DOMAIN-SUFFIX,127.net,Domestic
-- DOMAIN-SUFFIX,163.com,Domestic
-- DOMAIN-SUFFIX,360buyimg.com,Domestic
-- DOMAIN-SUFFIX,36kr.com,Domestic
-- DOMAIN-SUFFIX,air-matters.com,Domestic
-- DOMAIN-SUFFIX,alibaba.com,Domestic
-- DOMAIN-KEYWORD,alicdn,Domestic
-- DOMAIN-KEYWORD,alipay,Domestic
-- DOMAIN-KEYWORD,taobao,Domestic
-- DOMAIN-SUFFIX,amap.com,Domestic
-- DOMAIN-SUFFIX,autonavi.com,Domestic
-- DOMAIN-KEYWORD,baidu,Domestic
-- DOMAIN-SUFFIX,bdimg.com,Domestic
-- DOMAIN-SUFFIX,bdstatic.com,Domestic
-- DOMAIN-SUFFIX,caiyunapp.com,Domestic
-- DOMAIN-SUFFIX,chaoxing.com,Domestic
-- DOMAIN-SUFFIX,clouddn.com,Domestic
-- DOMAIN-SUFFIX,cnbeta.com,Domestic
-- DOMAIN-SUFFIX,cnbetacdn.com,Domestic
-- DOMAIN-SUFFIX,cootekservice.com,Domestic
-- DOMAIN-SUFFIX,csdn.net,Domestic
-- DOMAIN-SUFFIX,ctrip.com,Domestic
-- DOMAIN-SUFFIX,dgtle.com,Domestic
-- DOMAIN-SUFFIX,dianping.com,Domestic
-- DOMAIN-SUFFIX,douban.com,Domestic
-- DOMAIN-SUFFIX,doubanio.com,Domestic
-- DOMAIN-SUFFIX,duokan.com,Domestic
-- DOMAIN-SUFFIX,easou.com,Domestic
-- DOMAIN-SUFFIX,ele.me,Domestic
-- DOMAIN-SUFFIX,feng.com,Domestic
-- DOMAIN-SUFFIX,fir.im,Domestic
-- DOMAIN-SUFFIX,frdic.com,Domestic
-- DOMAIN-SUFFIX,gcores.com,Domestic
-- DOMAIN-SUFFIX,godic.net,Domestic
-- DOMAIN-SUFFIX,gtimg.com,Domestic
-- DOMAIN,cdn.hockeyapp.net,Domestic
-- DOMAIN-SUFFIX,hongxiu.com,Domestic
-- DOMAIN-SUFFIX,hxcdn.net,Domestic
-- DOMAIN-SUFFIX,iciba.com,Domestic
-- DOMAIN-SUFFIX,ifeng.com,Domestic
-- DOMAIN-SUFFIX,ifengimg.com,Domestic
-- DOMAIN-SUFFIX,ipip.net,Domestic
-- DOMAIN-SUFFIX,jd.com,Domestic
-- DOMAIN-SUFFIX,jianshu.com,Domestic
-- DOMAIN-SUFFIX,knewone.com,Domestic
-- DOMAIN-SUFFIX,le.com,Domestic
-- DOMAIN-SUFFIX,lecloud.com,Domestic
-- DOMAIN-SUFFIX,lemicp.com,Domestic
-- DOMAIN-SUFFIX,licdn.com,Domestic
-- DOMAIN-SUFFIX,linkedin.com,Domestic
-- DOMAIN-SUFFIX,luoo.net,Domestic
-- DOMAIN-SUFFIX,meituan.com,Domestic
-- DOMAIN-SUFFIX,meituan.net,Domestic
-- DOMAIN-SUFFIX,mi.com,Domestic
-- DOMAIN-SUFFIX,miaopai.com,Domestic
-- DOMAIN-SUFFIX,microsoft.com,Domestic
-- DOMAIN-SUFFIX,microsoftonline.com,Domestic
-- DOMAIN-SUFFIX,miui.com,Domestic
-- DOMAIN-SUFFIX,miwifi.com,Domestic
-- DOMAIN-SUFFIX,mob.com,Domestic
-- DOMAIN-SUFFIX,netease.com,Domestic
-- DOMAIN-SUFFIX,office.com,Domestic
-- DOMAIN-SUFFIX,office365.com,Domestic
-- DOMAIN-KEYWORD,officecdn,Domestic
-- DOMAIN-SUFFIX,oschina.net,Domestic
-- DOMAIN-SUFFIX,ppsimg.com,Domestic
-- DOMAIN-SUFFIX,pstatp.com,Domestic
-- DOMAIN-SUFFIX,qcloud.com,Domestic
-- DOMAIN-SUFFIX,qdaily.com,Domestic
-- DOMAIN-SUFFIX,qdmm.com,Domestic
-- DOMAIN-SUFFIX,qhimg.com,Domestic
-- DOMAIN-SUFFIX,qhres.com,Domestic
-- DOMAIN-SUFFIX,qidian.com,Domestic
-- DOMAIN-SUFFIX,qihucdn.com,Domestic
-- DOMAIN-SUFFIX,qiniu.com,Domestic
-- DOMAIN-SUFFIX,qiniucdn.com,Domestic
-- DOMAIN-SUFFIX,qiyipic.com,Domestic
-- DOMAIN-SUFFIX,qq.com,Domestic
-- DOMAIN-SUFFIX,qqurl.com,Domestic
-- DOMAIN-SUFFIX,rarbg.to,Domestic
-- DOMAIN-SUFFIX,ruguoapp.com,Domestic
-- DOMAIN-SUFFIX,segmentfault.com,Domestic
-- DOMAIN-SUFFIX,sinaapp.com,Domestic
-- DOMAIN-SUFFIX,smzdm.com,Domestic
-- DOMAIN-SUFFIX,snapdrop.net,Domestic
-- DOMAIN-SUFFIX,sogou.com,Domestic
-- DOMAIN-SUFFIX,sogoucdn.com,Domestic
-- DOMAIN-SUFFIX,sohu.com,Domestic
-- DOMAIN-SUFFIX,soku.com,Domestic
-- DOMAIN-SUFFIX,speedtest.net,Domestic
-- DOMAIN-SUFFIX,sspai.com,Domestic
-- DOMAIN-SUFFIX,suning.com,Domestic
-- DOMAIN-SUFFIX,taobao.com,Domestic
-- DOMAIN-SUFFIX,tencent.com,Domestic
-- DOMAIN-SUFFIX,tenpay.com,Domestic
-- DOMAIN-SUFFIX,tianyancha.com,Domestic
-- DOMAIN-SUFFIX,tmall.com,Domestic
-- DOMAIN-SUFFIX,tudou.com,Domestic
-- DOMAIN-SUFFIX,umetrip.com,Domestic
-- DOMAIN-SUFFIX,upaiyun.com,Domestic
-- DOMAIN-SUFFIX,upyun.com,Domestic
-- DOMAIN-SUFFIX,veryzhun.com,Domestic
-- DOMAIN-SUFFIX,weather.com,Domestic
-- DOMAIN-SUFFIX,weibo.com,Domestic
-- DOMAIN-SUFFIX,xiaomicp.com,Domestic
-- DOMAIN-SUFFIX,ximalaya.com,Domestic
-- DOMAIN-SUFFIX,xmcdn.com,Domestic
-- DOMAIN-SUFFIX,xunlei.com,Domestic
-- DOMAIN-SUFFIX,yhd.com,Domestic
-- DOMAIN-SUFFIX,yihaodianimg.com,Domestic
-- DOMAIN-SUFFIX,yinxiang.com,Domestic
-- DOMAIN-SUFFIX,ykimg.com,Domestic
-- DOMAIN-SUFFIX,youdao.com,Domestic
-- DOMAIN-SUFFIX,youku.com,Domestic
-- DOMAIN-SUFFIX,zealer.com,Domestic
-- DOMAIN-SUFFIX,zhihu.com,Domestic
-- DOMAIN-SUFFIX,zhimg.com,Domestic
-- DOMAIN-SUFFIX,zimuzu.tv,Domestic
-- DOMAIN-SUFFIX,zoho.com,Domestic
 
 # Proxy
 - DOMAIN-KEYWORD,amazon,Proxy
@@ -835,6 +716,131 @@ Rule:
 - IP-CIDR,109.239.140.0/24,Proxy
 - IP-CIDR,149.154.160.0/20,Proxy
 - IP-CIDR,149.154.164.0/22,Proxy
+
+# Domestic（中国网站）
+- DOMAIN-SUFFIX,cn,Domestic
+- DOMAIN-KEYWORD,-cn,Domestic
+- DOMAIN-SUFFIX,126.com,Domestic
+- DOMAIN-SUFFIX,126.net,Domestic
+- DOMAIN-SUFFIX,127.net,Domestic
+- DOMAIN-SUFFIX,163.com,Domestic
+- DOMAIN-SUFFIX,360buyimg.com,Domestic
+- DOMAIN-SUFFIX,36kr.com,Domestic
+- DOMAIN-SUFFIX,air-matters.com,Domestic
+- DOMAIN-SUFFIX,alibaba.com,Domestic
+- DOMAIN-KEYWORD,alicdn,Domestic
+- DOMAIN-KEYWORD,alipay,Domestic
+- DOMAIN-KEYWORD,taobao,Domestic
+- DOMAIN-SUFFIX,amap.com,Domestic
+- DOMAIN-SUFFIX,autonavi.com,Domestic
+- DOMAIN-KEYWORD,baidu,Domestic
+- DOMAIN-SUFFIX,bdimg.com,Domestic
+- DOMAIN-SUFFIX,bdstatic.com,Domestic
+- DOMAIN-SUFFIX,caiyunapp.com,Domestic
+- DOMAIN-SUFFIX,chaoxing.com,Domestic
+- DOMAIN-SUFFIX,clouddn.com,Domestic
+- DOMAIN-SUFFIX,cnbeta.com,Domestic
+- DOMAIN-SUFFIX,cnbetacdn.com,Domestic
+- DOMAIN-SUFFIX,cootekservice.com,Domestic
+- DOMAIN-SUFFIX,csdn.net,Domestic
+- DOMAIN-SUFFIX,ctrip.com,Domestic
+- DOMAIN-SUFFIX,dgtle.com,Domestic
+- DOMAIN-SUFFIX,dianping.com,Domestic
+- DOMAIN-SUFFIX,douban.com,Domestic
+- DOMAIN-SUFFIX,doubanio.com,Domestic
+- DOMAIN-SUFFIX,duokan.com,Domestic
+- DOMAIN-SUFFIX,easou.com,Domestic
+- DOMAIN-SUFFIX,ele.me,Domestic
+- DOMAIN-SUFFIX,feng.com,Domestic
+- DOMAIN-SUFFIX,fir.im,Domestic
+- DOMAIN-SUFFIX,frdic.com,Domestic
+- DOMAIN-SUFFIX,gcores.com,Domestic
+- DOMAIN-SUFFIX,godic.net,Domestic
+- DOMAIN-SUFFIX,gtimg.com,Domestic
+- DOMAIN,cdn.hockeyapp.net,Domestic
+- DOMAIN-SUFFIX,hongxiu.com,Domestic
+- DOMAIN-SUFFIX,hxcdn.net,Domestic
+- DOMAIN-SUFFIX,iciba.com,Domestic
+- DOMAIN-SUFFIX,ifeng.com,Domestic
+- DOMAIN-SUFFIX,ifengimg.com,Domestic
+- DOMAIN-SUFFIX,ipip.net,Domestic
+- DOMAIN-SUFFIX,jd.com,Domestic
+- DOMAIN-SUFFIX,jianshu.com,Domestic
+- DOMAIN-SUFFIX,knewone.com,Domestic
+- DOMAIN-SUFFIX,le.com,Domestic
+- DOMAIN-SUFFIX,lecloud.com,Domestic
+- DOMAIN-SUFFIX,lemicp.com,Domestic
+- DOMAIN-SUFFIX,licdn.com,Domestic
+- DOMAIN-SUFFIX,linkedin.com,Domestic
+- DOMAIN-SUFFIX,luoo.net,Domestic
+- DOMAIN-SUFFIX,meituan.com,Domestic
+- DOMAIN-SUFFIX,meituan.net,Domestic
+- DOMAIN-SUFFIX,mi.com,Domestic
+- DOMAIN-SUFFIX,miaopai.com,Domestic
+- DOMAIN-SUFFIX,microsoft.com,Domestic
+- DOMAIN-SUFFIX,microsoftonline.com,Domestic
+- DOMAIN-SUFFIX,miui.com,Domestic
+- DOMAIN-SUFFIX,miwifi.com,Domestic
+- DOMAIN-SUFFIX,mob.com,Domestic
+- DOMAIN-SUFFIX,netease.com,Domestic
+- DOMAIN-SUFFIX,office.com,Domestic
+- DOMAIN-SUFFIX,office365.com,Domestic
+- DOMAIN-KEYWORD,officecdn,Domestic
+- DOMAIN-SUFFIX,oschina.net,Domestic
+- DOMAIN-SUFFIX,ppsimg.com,Domestic
+- DOMAIN-SUFFIX,pstatp.com,Domestic
+- DOMAIN-SUFFIX,qcloud.com,Domestic
+- DOMAIN-SUFFIX,qdaily.com,Domestic
+- DOMAIN-SUFFIX,qdmm.com,Domestic
+- DOMAIN-SUFFIX,qhimg.com,Domestic
+- DOMAIN-SUFFIX,qhres.com,Domestic
+- DOMAIN-SUFFIX,qidian.com,Domestic
+- DOMAIN-SUFFIX,qihucdn.com,Domestic
+- DOMAIN-SUFFIX,qiniu.com,Domestic
+- DOMAIN-SUFFIX,qiniucdn.com,Domestic
+- DOMAIN-SUFFIX,qiyipic.com,Domestic
+- DOMAIN-SUFFIX,qq.com,Domestic
+- DOMAIN-SUFFIX,qqurl.com,Domestic
+- DOMAIN-SUFFIX,rarbg.to,Domestic
+- DOMAIN-SUFFIX,ruguoapp.com,Domestic
+- DOMAIN-SUFFIX,segmentfault.com,Domestic
+- DOMAIN-SUFFIX,sinaapp.com,Domestic
+- DOMAIN-SUFFIX,smzdm.com,Domestic
+- DOMAIN-SUFFIX,snapdrop.net,Domestic
+- DOMAIN-SUFFIX,sogou.com,Domestic
+- DOMAIN-SUFFIX,sogoucdn.com,Domestic
+- DOMAIN-SUFFIX,sohu.com,Domestic
+- DOMAIN-SUFFIX,soku.com,Domestic
+- DOMAIN-SUFFIX,speedtest.net,Domestic
+- DOMAIN-SUFFIX,sspai.com,Domestic
+- DOMAIN-SUFFIX,suning.com,Domestic
+- DOMAIN-SUFFIX,taobao.com,Domestic
+- DOMAIN-SUFFIX,tencent.com,Domestic
+- DOMAIN-SUFFIX,tenpay.com,Domestic
+- DOMAIN-SUFFIX,tianyancha.com,Domestic
+- DOMAIN-SUFFIX,tmall.com,Domestic
+- DOMAIN-SUFFIX,tudou.com,Domestic
+- DOMAIN-SUFFIX,umetrip.com,Domestic
+- DOMAIN-SUFFIX,upaiyun.com,Domestic
+- DOMAIN-SUFFIX,upyun.com,Domestic
+- DOMAIN-SUFFIX,veryzhun.com,Domestic
+- DOMAIN-SUFFIX,weather.com,Domestic
+- DOMAIN-SUFFIX,weibo.com,Domestic
+- DOMAIN-SUFFIX,xiaomicp.com,Domestic
+- DOMAIN-SUFFIX,ximalaya.com,Domestic
+- DOMAIN-SUFFIX,xmcdn.com,Domestic
+- DOMAIN-SUFFIX,xunlei.com,Domestic
+- DOMAIN-SUFFIX,yhd.com,Domestic
+- DOMAIN-SUFFIX,yihaodianimg.com,Domestic
+- DOMAIN-SUFFIX,yinxiang.com,Domestic
+- DOMAIN-SUFFIX,ykimg.com,Domestic
+- DOMAIN-SUFFIX,youdao.com,Domestic
+- DOMAIN-SUFFIX,youku.com,Domestic
+- DOMAIN-SUFFIX,zealer.com,Domestic
+- DOMAIN-SUFFIX,zhihu.com,Domestic
+- DOMAIN-SUFFIX,zhimg.com,Domestic
+- DOMAIN-SUFFIX,zimuzu.tv,Domestic
+- DOMAIN-SUFFIX,zoho.com,Domestic
 
 # LAN
 - DOMAIN-SUFFIX,local,DIRECT
