--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,6 +1,6 @@
 # 适用于 Loon 2.0+ 版本的配置文件
 # 使用 JS 脚本需要 Loon 版本大于 2.1.0(107)，如不符合请删除 [Script] 所有内容直到 [MITM] 上方（包扩 [Script]）
-# 2020年04月14日 00:00 UTC/GMT +8
+# 2020年04月20日 23:50 UTC/GMT +8
 
 [General]
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
@@ -47,18 +47,19 @@ Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*美国
 #🎵声田音乐 = select,🎬国际媒体,✈️代理,⭕️直连
 #📺油管视频 = select,🎬国际媒体,✈️代理,⭕️直连
 #📡电报服务 = select,✈️代理,🇸🇬新加坡节点,🇺🇸美国节点,🇭🇰香港节点
+#📦微软服务 = select,⭕️直连,✈️代理
 ⏳网速测试 = select,✈️代理,⭕️直连,Dler Cloud
 🔗其他 = select,✈️代理,⭕️直连
 
 # 注意下方的 Dler Cloud 名称，如有不使用的国家/地区节点策略组，请在上方规则策略组中一并删除相关节点策略组
-🔎自动选择 = url-test,Dler Cloud,url = http://www.gstatic.com/generate_204,interval = 600
-🇨🇳中国节点 = fallback,Dler Cloud - CN,url = http://www.gstatic.com/generate_204,interval = 600
-🇭🇰香港节点 = fallback,Dler Cloud - HK,url = http://www.gstatic.com/generate_204,interval = 600
-🇨🇳台湾节点 = fallback,Dler Cloud - TW,url = http://www.gstatic.com/generate_204,interval = 600
-🇸🇬新加坡节点 = fallback,Dler Cloud - SG,url = http://www.gstatic.com/generate_204,interval = 600
-🇯🇵日本节点 = fallback,Dler Cloud - JP,url = http://www.gstatic.com/generate_204,interval = 600
-🇰🇷韩国节点 = fallback,Dler Cloud - KR,url = http://www.gstatic.com/generate_204,interval = 600
-🇺🇸美国节点 = fallback,Dler Cloud - US,url = http://www.gstatic.com/generate_204,interval = 600
+🔎自动选择 = url-test,Dler Cloud,url = http://www.gstatic.com/generate_204,interval = 300
+🇨🇳中国节点 = fallback,Dler Cloud - CN,url = http://www.gstatic.com/generate_204,interval = 300
+🇭🇰香港节点 = fallback,Dler Cloud - HK,url = http://www.gstatic.com/generate_204,interval = 300
+🇨🇳台湾节点 = fallback,Dler Cloud - TW,url = http://www.gstatic.com/generate_204,interval = 300
+🇸🇬新加坡节点 = fallback,Dler Cloud - SG,url = http://www.gstatic.com/generate_204,interval = 300
+🇯🇵日本节点 = fallback,Dler Cloud - JP,url = http://www.gstatic.com/generate_204,interval = 300
+🇰🇷韩国节点 = fallback,Dler Cloud - KR,url = http://www.gstatic.com/generate_204,interval = 300
+🇺🇸美国节点 = fallback,Dler Cloud - US,url = http://www.gstatic.com/generate_204,interval = 300
 
 # 为了与其他策略名称保持一致
 ⭕️直连 = select,DIRECT
@@ -84,16 +85,52 @@ FINAL,🔗其他
 
 [Remote Rule]
 # 订阅规则、策略
-# 默认注释网易云音乐 / Netflix / Spotify / YouTube / Telegram 规则及策略，如需使用请取消 # 注释
+# 广告拦截及 Apple
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list,🚫广告拦截
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list,🍏苹果服务
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list,🎵网易云音乐
-https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list,🎬国内媒体
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list,📺网飞视频
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Spotify.list,🎵声田音乐
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list,📺油管视频
-https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list,🎬国际媒体
+# 国内媒体分组，如需为某个规则列表单独设置策略，请直接修改最后的策略名称
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netease%20Music.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bilibili.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/iQiyi.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Letv.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/MOO.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Tencent%20Video.list,🎬国内媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Youku.list,🎬国内媒体
+# 国际媒体分组，如需为某个规则列表单独设置策略，请直接修改最后的策略名称
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list,📺网飞视频
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Spotify.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/ABC.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Abema%20TV.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Amazon.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Apple%20News.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Apple%20TV.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/BBC%20iPlayer.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/DAZN.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Disney%20Plus.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/encoreTVB.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Fox%20Now.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Fox%2B.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/HBO.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Hulu%20Japan.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Hulu.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Japonx.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/JOOX.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/KKBOX.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/KKTV.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Line%20TV.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/myTV%20SUPER.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Pandora.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/PBS.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Pornhub.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Soundcloud.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/ViuTV.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube%20Music.list,🎬国际媒体
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list,🎬国际媒体
+# 电报及微软可选规则列表
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list,📡电报服务
+#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list,📦微软服务
+# 必须规则列表
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Speedtest.list,⏳网速测试
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Proxy.list,✈️代理
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Domestic.list,🥏大陆网络
