Add HBO Max services.

--- a/Clash/Clash.yaml
+++ b/Clash/Clash.yaml
@@ -339,6 +339,8 @@ Rule:
 - DOMAIN-SUFFIX,hbogo.com,GMedia
 - DOMAIN-SUFFIX,hbogoasia.com,GMedia
 - DOMAIN-SUFFIX,hbogoasia.hk,GMedia
+- DOMAIN-SUFFIX,hbonow.com,GMedia
+- DOMAIN-SUFFIX,hbomax.com,GMedia
 - DOMAIN-SUFFIX,happyon.jp,GMedia
 - DOMAIN-SUFFIX,hulu.com,GMedia
 - DOMAIN-SUFFIX,hulu.jp,GMedia
