--- a/Quantumult/Quantumult.conf
+++ b/Quantumult/Quantumult.conf
@@ -8611,6 +8611,8 @@ HOST-SUFFIX,hboasia.com,DIRECT
 HOST-SUFFIX,hbogo.com,DIRECT
 HOST-SUFFIX,hbogoasia.com,DIRECT
 HOST-SUFFIX,hbogoasia.hk,DIRECT
+HOST-SUFFIX,hbonow.com,DIRECT
+HOST-SUFFIX,hbomax.com,DIRECT
 
 # > Hulu
 USER-AGENT,Hulu*,DIRECT
