--- a/Quantumult/Quantumult_media_only.conf
+++ b/Quantumult/Quantumult_media_only.conf
@@ -8603,6 +8603,8 @@ HOST-SUFFIX,hbo.com,DIRECT
 HOST-SUFFIX,hboasia.com,DIRECT
 HOST-SUFFIX,hbogo.com,DIRECT
 HOST-SUFFIX,hbogoasia.hk,DIRECT
+HOST-SUFFIX,hbonow.com,DIRECT
+HOST-SUFFIX,hbomax.com,DIRECT
 
 # > Hulu
 USER-AGENT,Hulu*,DIRECT
