--- a/Quantumult/Quantumult_media_only_lite.conf
+++ b/Quantumult/Quantumult_media_only_lite.conf
@@ -677,6 +677,8 @@ HOST-SUFFIX,hbo.com,DIRECT
 HOST-SUFFIX,hboasia.com,DIRECT
 HOST-SUFFIX,hbogo.com,DIRECT
 HOST-SUFFIX,hbogoasia.hk,DIRECT
+HOST-SUFFIX,hbonow.com,DIRECT
+HOST-SUFFIX,hbomax.com,DIRECT
 
 # > Hulu
 USER-AGENT,Hulu*,DIRECT
